Fix every blocks gap in register modal form

--- a/app/styles/layout/_modals.scss
+++ b/app/styles/layout/_modals.scss
@@ -164,6 +164,11 @@
   }
   .modal-wrapper {
     padding: 30px;
+    
+    form {
+      display: grid;
+      grid-gap: 45px;
+    }
   }
   @media (min-width: 544px) {
     .modal-dialog {
